force-app/main/default/objects/Opportunity_Line_Item__c/Opportunity_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Opportunity Line Item</label>
    <nameField>
        <displayFormat>OLI-{000000}</displayFormat>
        <label>Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>