force-app/main/default/objects/Opportunity_Line_Item__c/fields/Last_Modified_By_Custom__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By_Custom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Opportunity Line Items</relationshipLabel>
    <relationshipName>OLI_Last_Modified_By_Custom</relationshipName>
    <type>Lookup</type>
</CustomField>