force-app/main/default/objects/Opportunity_Line_Item__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Opportunity Line Items</relationshipLabel>
    <relationshipName>OLI_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>