force-app/main/default/objects/Opportunity_Line_Item__c/fields/Opportunity_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product_Name__c</fullName>
    <label>Opportunity Product Name</label>
    <length>376</length>
    <type>LongTextArea</type>
</CustomField>