force-app/main/default/objects/Opportunity_Line_Item__c/fields/Quote_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line Item</label>
    <referenceTo>Quote_Line_Item__c</referenceTo>
    <relationshipLabel>Opportunity Line Items</relationshipLabel>
    <relationshipName>Opportunity_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>